{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 21,
  "lineage": "00517075-4f00-ffb9-1f2b-be4637615eb8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c755be07a8ca326",
            "association_id": "eipassoc-0a8e65192819e7323",
            "domain": "vpc",
            "id": "eipalloc-03c755be07a8ca326",
            "network_border_group": "us-east-1",
            "network_interface": "eni-042e9d843fa0a700a",
            "private_dns": "ip-10-0-0-122.ec2.internal",
            "private_ip": "10.0.0.122",
            "public_dns": "ec2-44-208-61-82.compute-1.amazonaws.com",
            "public_ip": "44.208.61.82",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017b50dda50963bf2",
            "association_id": "eipassoc-0cc6ab9ba6b149d50",
            "domain": "vpc",
            "id": "eipalloc-017b50dda50963bf2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e9bd4f38278df5ca",
            "private_dns": "ip-10-0-1-152.ec2.internal",
            "private_ip": "10.0.1.152",
            "public_dns": "ec2-52-87-100-92.compute-1.amazonaws.com",
            "public_ip": "52.87.100.92",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587724836224:internet-gateway/igw-03b0d68b3ae882366",
            "id": "igw-03b0d68b3ae882366",
            "owner_id": "587724836224",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0efb229063eb8ca18"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c755be07a8ca326",
            "connectivity_type": "public",
            "id": "nat-09b63da99bf0f04bf",
            "network_interface_id": "eni-042e9d843fa0a700a",
            "private_ip": "10.0.0.122",
            "public_ip": "44.208.61.82",
            "subnet_id": "subnet-0f548eea5a4508926",
            "tags": {
              "Name": "main NAT"
            },
            "tags_all": {
              "Name": "main NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017b50dda50963bf2",
            "connectivity_type": "public",
            "id": "nat-09713aa6575ba9b3c",
            "network_interface_id": "eni-0e9bd4f38278df5ca",
            "private_ip": "10.0.1.152",
            "public_ip": "52.87.100.92",
            "subnet_id": "subnet-0d910fd1832d9da2f",
            "tags": {
              "Name": "main NAT"
            },
            "tags_all": {
              "Name": "main NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587724836224:route-table/rtb-06a13f2f75eff2ab1",
            "id": "rtb-06a13f2f75eff2ab1",
            "owner_id": "587724836224",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-09b63da99bf0f04bf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private0"
            },
            "tags_all": {
              "Name": "private0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efb229063eb8ca18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587724836224:route-table/rtb-03a860370dd3a072b",
            "id": "rtb-03a860370dd3a072b",
            "owner_id": "587724836224",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-09713aa6575ba9b3c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efb229063eb8ca18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587724836224:route-table/rtb-0aa9afa48bc6b3f15",
            "id": "rtb-0aa9afa48bc6b3f15",
            "owner_id": "587724836224",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b0d68b3ae882366",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efb229063eb8ca18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587724836224:subnet/subnet-0e72311da8276deca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e72311da8276deca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "587724836224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private0"
            },
            "tags_all": {
              "Name": "private0"
            },
            "vpc_id": "vpc-0efb229063eb8ca18"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587724836224:subnet/subnet-087927fe062a00275",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087927fe062a00275",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "587724836224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "vpc_id": "vpc-0efb229063eb8ca18"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587724836224:subnet/subnet-0f548eea5a4508926",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f548eea5a4508926",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "587724836224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public0}"
            },
            "tags_all": {
              "Name": "public0}"
            },
            "vpc_id": "vpc-0efb229063eb8ca18"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587724836224:subnet/subnet-0d910fd1832d9da2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d910fd1832d9da2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "587724836224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public1}"
            },
            "tags_all": {
              "Name": "public1}"
            },
            "vpc_id": "vpc-0efb229063eb8ca18"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587724836224:vpc/vpc-0efb229063eb8ca18",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08e476d3d80834149",
            "default_route_table_id": "rtb-03455fd8989caa69a",
            "default_security_group_id": "sg-0fbca5dd2baf0cd7a",
            "dhcp_options_id": "dopt-01765bc01112e9748",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0efb229063eb8ca18",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03455fd8989caa69a",
            "owner_id": "587724836224"
          }
        }
      ]
    }
  ]
}